created additional scss file for main variables and imported it into the main scss file, started working on main page

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,7 @@
+@import "parts/variables";
 body {
-    background: yellow;
+    font-family: $main-font-family, "Arial", "Tahoma";
+    font-size: $main-font-size;
+    color: $primary-font-color;
+    line-height: $default-line-height;
 }
