--- a/src/scss/parts/_variables.scss
+++ b/src/scss/parts/_variables.scss
@@ -12,3 +12,4 @@ $default-line-height: 160%;
 $primary-font-color: #212353;
 $secondary-font-color: #4B5D68;
 $primary-special-color: #9C69E2;
+$secondary-special-font-color: #93B8FF;
