created about us section and styles for new section

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,6 @@
 @import "parts/variables";
 @import "parts/reset";
 @import "parts/global";
+@import "parts/blocks/sections/about";
 @import "parts/blocks/header";
 @import "parts/blocks/navigation";
