--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,6 +2,8 @@
 @import "parts/reset";
 @import "parts/global";
 @import "parts/blocks/sections/about";
+@import "parts/blocks/sections/content";
+@import "parts/blocks/sections/articles";
 @import "parts/blocks/sections/advert";
 @import "parts/blocks/header";
 @import "parts/blocks/navigation";
