--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,6 +3,7 @@
 @import "parts/global";
 @import "parts/blocks/sections/about";
 @import "parts/blocks/sections/content";
+@import "parts/blocks/footer";
 @import "parts/blocks/sections/articles";
 @import "parts/blocks/sections/advert";
 @import "parts/blocks/header";
